salesforce/10.2/modules/ROOT/pages/salesforce-connector-studio.adoc
= Salesforce Studio Configuration v10.2 - Mule 4
:page-aliases: connectors::salesforce/salesforce-connector-studio.adoc

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-input-source,Configure an input source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.

If you are new to configuring connectors in Studio, see xref:connectors::introduction/intro-config-use-studio.adoc[Use Studio to Configure a Connector]. If, after reading this topic, you need additional information about the connector fields, see xref:salesforce-connector-reference.adoc[Salesforce Reference].

[[create-mule-project]]
== Create a Mule Project

In Studio, create a new Mule project in which to add and configure the connector:

. In Studio, select *File > New > Mule Project*.
. Enter a name for your Mule project and click *Finish*.

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add Salesforce Connector to your Mule project to automatically populate the XML code with the connector's namespace and schema location and add the required dependencies to the project's `pom.xml` file:

. In the *Mule Palette* view, click *(X) Search in Exchange*.
. In *Add Modules to Project*, type `salesforce` in the search field.
. Click the connector name in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

[[configure-input-source]]
== Configure an Input Source

. Drag a connector operation to the Studio canvas.
+
To use Salesforce Connector as an input source, drag one of these operations to the Source area of a flow. A channel or topic must be published to Salesforce before a subscription to the channel can be created.
+
* *On Deleted Object*
+
Initiates your app when a Salesforce user deletes an object. Possible object types are `Contact`, `Lead`, `Account`, `Contracts`, `Opportunity`, or the name of a custom object.
+
* *On Modified Object*
+
Initiates your app when a Salesforce user modifies an object. Possible object types are `Contact`, `Lead`, `Account`, `Contracts`, `Opportunity`, or the name of a custom object.
+
* *On New Object*
Initiates your app when a Salesforce user creates a new object. Possible object types are `Contact`, `Lead`, `Account`, `Contracts`, `Opportunity`, or the name of a custom object.
* *Replay channel listener*
+
Subscribes to a streaming channel. This input source provides channel-related notification settings for new events and events stored by Salesforce within the 24-hour retention period. Events that occur in the specified channel input source trigger the flow.
+
* *Replay topic listener*
+
Subscribes to a topic. This input source provides topic-related notification settings for new events and events stored by Salesforce within the 24-hour retention period. Events that occur on records in the specified topic trigger the flow.
+
* *Subscribe channel listener*
+
Subscribes to a streaming channel. This input source provides channel-related notification settings for new events that occur after you subscribe.
+
* *Subscribe topic listener*
+
Subscribe to a topic. This input source provides topic-related notification settings for new events that occur after you subscribe.
+
For the *On New Object* and *On Modified Object* operations, specify a UTC value in the *Since* field. If the server is in a different time zone, you must specify a value in this field. If you leave the field empty, the connector uses the local timestamp.

[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you immediately define a specific operation for that connector to perform.

To add an operation for Salesforce, follow these steps:

. In the *Mule Palette* view, select *Salesforce* and then select the desired operation.
. Drag the operation onto the Studio canvas to the right of the input source.

[[configure-global-element]]
== Configure a Global Element for the Connector

When you configure a connector, it’s best to configure a global element that all instances of that connector in the app can use. Configuring a global element requires you to provide the authentication credentials the connector uses to access the target Salesforce system.

To configure the global element for Salesforce Connector, follow these steps:

. Select the name of the connector in the Studio canvas.
. In the configuration screen for the operation, click the plus sign (+) next to the *Connector configuration* field to access the global element configuration fields.
. On the *General* tab, configure the authentication connection type: +
** <<Basic Authentication>>
** <<OAuth 2.0>>
** <<OAuth JWT>>
** <<OAuth SAML>>
** <<OAuth Username Password>>
. For each of the connection choices, you can set optional proxy values:
+
** *Host*
+
Host name of the proxy server
+
** *Port*
+
Number of the port on which the proxy server runs
+
** *Username*
+
Username to log in to the server
+
** *Password*
+
Corresponding password
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

After completing the fields in the *Global Element Properties* screen, return to the main connector menu and set the <<Connector Property Values>>.

== Basic Authentication

Basic authentication uses a username and password for authentication.

Important fields include the following:

* *Username* (required) +
Salesforce username
* *Password* (required) +
Corresponding password
* *Security token* +
Corresponding security token
* *Authorization URL* +
URL for the endpoint configured to process SOAP authentication requests

== OAuth 2.0

OAuth 2.0 delegates user authentication to the service hosting the user account.

Important fields include the following:

* *Consumer key* (required): +
Consumer key for the Salesforce-connected app. See <<Create a Consumer Key>>.
* *Consumer secret* (required) +
Consumer secret for the connector to access Salesforce +
* *Listener config* (required) +
Configuration for the listener, for example, `HTTP_Listener_config` +
* *Callback path* (required) +
Path for the callback, for example, `/callback`
* *Authorize path* (required) +
Path for authorization, for example, `/authorize` +
* *External callback url* +
Callback URL, for example, `+http://localhost:8085/callback+`

== OAuth JWT

Important fields include the following:

* *Consumer key* (required)
+
Consumer key for the Salesforce-connected app. See <<Create a Consumer Key>>.
+
* *Key store* (required)
+
See <<Generate a Keystore File>>.
+
* *Store password* (required)
+
Password for the keystore
+
* *Certificate Alias* (optional)
+
The alias of the certificate to be used if the specified keystore contains multiple certificates
+
* *Principal* (required)
+
Username of the Salesforce user

== OAuth SAML

Important fields:

* *Consumer key* (required)
+
Consumer key for the Salesforce-connected app. See <<Create a Consumer Key>>.
+
* *Key store* (required)
+
See <<Generate a Keystore File>>.
+
* *Store password* (required)
+
Password for the keystore
+
* *Certificate Alias* (optional)
+
The alias of the certificate to be used if the specified keystore contains multiple certificates
+
* *Principal* (required)
+
Username of the Salesforce user

== OAuth Username Password

Important fields:

* *Consumer key* (required)
+
Consumer key for the Salesforce-connected app. See <<Create a Consumer Key>>.
+
* *Consumer secret* (required)
+
Consumer secret for the connector to access Salesforce
+
* *Username* (required)
+
Salesforce username
+
* *Password* (required)
+
Corresponding password
+
* *Security token*
+
Corresponding security token

[[propvals]]
== Connector Property Values

The following example shows four operations of the many you can configure for Salesforce Connector, as well as the important fields for these operations:

[%header%autowidth.spread]
|===
|Operation |Important Fields
|Create a|

* *Type*: Salesforce object type
* *Records*: Function editor expression
|Query a|v10.1/salesforce-connector-101

* *Salesforce query*: Salesforce query to retrieve objects.
* *Parameters*: Values for placeholders in the Salesforce query
|Update a|

* *Type*:  Salesforce object type.
* *Records*: Function editor expression to produce a collection of Salesforce objects to update

|Delete a|

* *Records To Delete IDs*: Function editor expression to produce a collection of Salesforce objects to delete
|===

== Create a Consumer Key

A consumer key is required when setting up OAuth 2.0 configurations for Salesforce Connector. It is used by the OAuth, JWT, and SAML bearer configurations, and by the OAuth Username and Password configuration.

This procedure provides guidance for using Salesforce to create a consumer key and explains how to create a connected app in Salesforce. However, the steps might differ in your Salesforce instance.

This procedure assumes that you already have a certification file (such as `salesforce-cert.crt`). If not, you can produce one by generating a Java keystore and public key.

[[create-consumer-key]]
. Log in to Salesforce.
. From Setup, enter `Apps` in the *Quick Find* box.
. Click *App Manager*.
. Click *New Connected App*.
. To create a new connected app, enter:
+
* A name for the connected app
* The API name
* The contact email
+
. In the *API (Enable OAuth Settings)* section, select the *Enable OAuth Settings* checkbox:
+
* Enter the *Callback URL*.
* Select the *Use Digital Signatures* checkbox.
* Click *Choose File* and load your Salesforce certificate (for example, `salesforce-cert.crt`), which contains your public key.
+
In Studio, you typically store the certificate in the workspace that contains your Mule app.
+
. Add and save these OAuth scopes to *Selected OAuth Scopes*:
+
** *Full Access* (`full`)
** *Perform Requests On Your Behalf At Any Time* (`refresh_token`, `offline_access`)
+
. Configure the authorization settings for the app.
. Click *Manage*.
. In the OAuth Policies section, expand the *Permitted Users* list and select *Admin Approved Users are Pre-Authorized*.
+
. Click *Save*.
. In the Profiles section, click *Manage Profiles*.
. Select your user profile and click *Save*.
. Select *Build* > *Create* > *Apps* to return to the list of connected apps.
. In the Connected Apps section, select the connected app you created.

You can now see the consumer key that you need to provide in your connector's configuration.

== Generate a Keystore File

This example demonstrates how to create a JKS keystore (PKCS12 format is also supported).

The Key Store field is the path to the keystore used to sign data during authentication.

To generate a keystore file:

. Go to your Mule workspace and open the command prompt (for Windows) or Terminal (for Mac).
. Type this command and press enter:
+
[source]
----
keytool -genkeypair -alias salesforce-cert -keyalg RSA -keystore salesforce-cert.jks
----
+
. Enter the following information:
+
** Password for the keystore
** Your first name and last name
** Your organization unit
** Name of your city, state, and the two-letter code for your country
+
The system generates a Java keystore file (JKS format) that contains a private or public key pair in your workspace.
+
. Provide the file path for the keystore in your connector configuration.
+
Type this command and press enter:
+
[source]
----
keytool -exportcert -alias salesforce-cert -file salesforce-cert.crt -keystore salesforce-cert.jks
----
+
The system exports the public key from the keystore into the workspace. This is the public key that you need to enter in your Salesforce instance.
+
. Verify that you have both the keystore (`salesforce-cert.jks`) and the public key (`salesforce-cert.crt`) files in your workspace.

== Use Mutual TLS

In v9.7.0 and later, all authentication types support mutual TLS. To use mutual TLS, you need a keystore file and a password for the file. See <<Generate a Keystore File>> for more information.

Specify the path to the keystore file and the password in the configuration window:

image::salesforce-100-mutual-tls.png[Mutual TLS]

Any user requiring mutual TLS authentication can log in using the connector.

To set up a mutual TLS certificate in your Salesforce environment, see https://help.salesforce.com/articleView?id=security_keys_uploading_mutual_auth_cert.htm&type=5[Set Up a Mutual Authentication Certificate].

[[apexsets]]
== Apex Settings

You can configure Apex REST and SOAP access using Studio or XML. When you connect to Salesforce, Salesforce Connector gets the names of the Apex classes and the associated methods that can be invoked.

All Salesforce connection configurations support these Apex settings:

* *Fetch All Apex SOAP Metadata*
+
Fetches the metadata of all the Apex SOAP classes. Takes precedence over Apex Class Name settings.
+
* *Fetch All Apex REST Metadata*
+
Fetches the metadata of all the Apex REST classes. Takes precedence over Apex Class Name settings.
+
* *Apex Class Names*
+
List of Apex class names to use for limiting the set of classes you fetch, along with the methods they expose. This setting can accelerate the fetch process if there are many classes that you do not need to fetch.

You can provide Apex settings in Studio.
See also xref:salesforce-connector-xml-maven.adoc[XML Settings].

Click the *Apex* tab to choose the settings.

Apex settings values:

* *Fetch All Apex SOAP Metadata*
+
Fetches the metadata of all the Apex SOAP classes
+
* *Fetch All Apex REST Metadata*
+
Fetches the metadata of all the all Apex REST classes

Apex Class Names:

The *Expression*, *Edit inline*, or *Bean reference* choices provide these options:

* *None*
+
No Apex class name is mentioned for DataSense to acquire.
* *From a message*
+
Enables you to specify the class name using an expression.
+
* *Create object manually*
+
Enables you to create a list of class names for DataSense to acquire. DataSense acquires only those classes and their associated methods.

The *Fetch All Apex SOAP Metadata* and *Fetch All Apex REST Metadata* checkboxes take precedence over the *Apex Class Names* setting. If these boxes are selected, they fetch all the Apex SOAP metadata or Apex REST metadata, regardless of your selection in the Apex Class Names section.

== Next

After completing Studio set up, see xref:salesforce-connector-config-topics.adoc[Additional Configuration Information].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
